Fixed a minor error regarding the bottom being too long.

--- a/first/index.css
+++ b/first/index.css
@@ -21,6 +21,6 @@ body{
 .bottom{
     margin: auto;
     width: 80%;
-    height: 525px;
+    height: 68px;
     background-color: black;
 }
